--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -4,6 +4,7 @@
         <meta charset=utf-8"/>
         <link rel="stylesheet", type="text/css", href="page.css">
         <title>ONLINE BUS TRACK SERVICES</title>
+        <link rel="icon" type="image/x-icon" href="https://th.bing.com/th/id/R.0e2fb8284f0fa18c374455bebb09ac75?rik=1X%2f5MvRFCRvJaw&riu=http%3a%2f%2fwww.bus-planet.com%2fbus%2fpictures%2fRwanda%2f890%2fJV-2016-01-18-001-890.jpg&ehk=KzXJ3uYQ4YBjkhpVnjNFXQSsZlMp7mY2AYL%2f9543vqE%3d&risl=&pid=ImgRaw&r=0">
     </head>
     <body><!--
         <h1>ONLINE BUS TRACK SERVICES</h1>
@@ -15,7 +16,7 @@
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">CONTACT</a></li>
-                        <li><a href="">COMMENTS</a></li>
+                        <li><a href="./reviews.html">REVIEWS</a></li>
                     </ul></nav>
                     <div class="artcile">
                         <h1>ONLINE BUS TRACK SERVICES</h1>
