--- a/landingpage.html
+++ b/landingpage.html
@@ -15,6 +15,7 @@
                     <ul>
                         <li><a href="" class="active">HOME</a></li>
                         <li><a href="./about.html">ABOUT</a></li>
+                        <li><a href="./features.html">FEATURES</a></li>
                         <li><a href="">CONTACT</a></li>
                         <li><a href="./reviews.html">REVIEWS</a></li>
                     </ul></nav>
