online bus track services

--- a/assets/landingpage.html
+++ b/assets/landingpage.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset=utf-8"/>
-        <link rel="stylesheet", type="text/css", href="landingpage.css">
+	    <meta charset=utf-8"/>
+	    <!--styles file-->
+	     <link rel="stylesheet", type="text/css", href="landingpage.css">
+	     <!--name and title of the website-->
         <title>ONLINE BUS TRACK SERVICES</title>
         <link rel="icon" type="image/x-icon" href="https://th.bing.com/th/id/R.0e2fb8284f0fa18c374455bebb09ac75?rik=1X%2f5MvRFCRvJaw&riu=http%3a%2f%2fwww.bus-planet.com%2fbus%2fpictures%2fRwanda%2f890%2fJV-2016-01-18-001-890.jpg&ehk=KzXJ3uYQ4YBjkhpVnjNFXQSsZlMp7mY2AYL%2f9543vqE%3d&risl=&pid=ImgRaw&r=0">
     </head>
     <body><!--
         <h1>ONLINE BUS TRACK SERVICES</h1>
         <h5>Helping you get around Kigali</h5>-->
+	<!--navigation bar icons-->
         <section>
             <div class="container">
                 <nav>
@@ -20,8 +23,10 @@
                         <li><a href="./reviews.html">REVIEWS</a></li>
                     </ul></nav>
                     <div class="article">
+			    <!--website name and mission-->
                         <h1>ONLINE BUS TRACK SERVICES</h1>
                         <h5>Wanna track your next bus..<br>This is the right place</h5>
+			<!--button enabling to access dashboards-->
                         <a href="./track.html" class="btn">TRACK NOW</a>
                     </div>
         </div>
