--- a/assets/passengers.html
+++ b/assets/passengers.html
@@ -3,24 +3,29 @@
     <head>
         <meta charset =utf-8'/>
         <title>Login</title>
+	<!--styles file-->
         <link rel="stylesheet", type="text/css", href="passengers.css">
 
     </head>
     <body>
         <div class="wrapper">
             <h1>Login</h1>
+	    <!--input box for the user name-->
             <div class="input-box">
                 <input type="text" placeholder="Username" required>
             </div>
+	    <!--input box for password-->
             <br>
             <div class="input-box">
                 <input type="password" placeholder="Password" required>
             </div>
+	    <!--helps you remember your password-->
             <div class="remember-forgot">
                 <label><input type="checkbox">Remember me</label>
                 <br>
                 <a href=""> Forgot password</a>
             </div>
+	    <!--redirects to the main page-->
             <form action="./main.html" method="get">
              <button type="submit" class="btn">Login</button>
              </form>
