--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset=utf-8"/>
         <title>Your review</title>
+	<!--styles file-->
         <link rel="stylesheet", type="text/css", href="./reviews.css">
 
     </head>
     <body>
         <h1><strong>RATE OUR SERVICE</strong></h1>
+	<!--rate the service of the website on a scale of 1 to 5-->
         <form action ="process choice.php"; method="POST">
             
             <input type="radio" name="choice" value="1">1
@@ -20,6 +22,7 @@
             <textarea  cols="80"; rows="3"; name="review"></textarea><br>
             
         </form>
+	<!--redirects to the landing page-->
         <form action="./landingpage.html" method="get">
             <input type="submit" value="Submit" name="submit" id="landingpage.html" />
         </form>
